[gd_scene load_steps=10 format=3 uid="uid://bip3q1iwo32k3"]

[ext_resource type="Theme" uid="uid://ct8u880b0h3no" path="res://main_theme.tres" id="1_gy3gl"]
[ext_resource type="Script" uid="uid://d22hdr2o6i007" path="res://scripts/cards/card_ui.gd" id="2_els2s"]
[ext_resource type="Script" uid="uid://bwexfhofxedmg" path="res://scripts/cards/card_state_machine.gd" id="3_psaan"]
[ext_resource type="Script" uid="uid://cighc8yw8f6r0" path="res://scripts/cards/card_states/card_base_state.gd" id="4_orrkt"]
[ext_resource type="Script" uid="uid://cw1ifaf846pcu" path="res://scripts/cards/card_states/card_clicked_state.gd" id="5_yxx8x"]
[ext_resource type="Script" uid="uid://c0agn5lpi7es3" path="res://scripts/cards/card_states/card_dragging_state.gd" id="6_ci03s"]
[ext_resource type="Script" uid="uid://255304o4l2bt" path="res://scripts/cards/card_states/card_released_state.gd" id="7_js3ux"]
[ext_resource type="Script" uid="uid://cw8h73obhrx0q" path="res://scripts/cards/card_states/card_aiming_state.gd" id="8_yxx8x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gy3gl"]
size = Vector2(25, 30)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -231.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gy3gl")
script = ExtResource("2_els2s")

[node name="Colour" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0939623, 0.293147, 0.104454, 1)

[node name="State" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "state"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardArea" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardArea"]
position = Vector2(12.5, 15)
shape = SubResource("RectangleShape2D_gy3gl")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_psaan")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_orrkt")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_yxx8x")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_ci03s")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_js3ux")
state = 4

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_yxx8x")
state = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="CardArea" to="." method="_on_card_area_area_entered"]
[connection signal="area_exited" from="CardArea" to="." method="_on_card_area_area_exited"]
